src/objects/Telemarketing_time__c.object
<CustomObject>
    <description>Telemarketing Time and Holiday Block</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of Telemarketing</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of Telemarketing</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Telemarketing Times</relationshipLabel>
        <relationshipName>Telemarketing_Times</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Telemarketing Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>List_of_Times</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>List of Times</label>
    </listViews>
    <nameField>
        <label>Telemarketing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telemarketing Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>